[package]
name = "milk-tea"
version = "0.1.1"
authors = ["finndotbin"]
edition = "2021"
rust-version = "1.79.0"
description = "A minimal library for creating TUI apps"
readme = "README.md"
repository = "https://github.com/finndotbin/milk-tea"
license = "MIT"
keywords = ["tui", "terminal"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.27.0"
unicode-display-width = "0.3.0"
unicode-segmentation = "1.11.0"
